feature-templates/nCino/dataset/10zJrQ08-Branches/.store/metadata/objects/LLC_BI__EmailTemplate_Institution__c.object
<CustomObject>
    <description>A financial institution can maintain distinct Communities for each of their branded institutions. This junction object is a link between email templates and the Institution object. Use this object to determine which emails are sent to users associated with a particular institution.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__EmailTemplate__c</fullName>
        <description>Populate this text field with the Salesforce ID of the email template to be sent to users from the institution.</description>
        <inlineHelpText>Populate this text field with the Salesforce ID of the email template to be sent to users from the institution.</inlineHelpText>
        <label>Email Template</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Template_Purpose__c</fullName>
        <description>The data installer autopopulates this picklist field with the action or purpose the email template accomplishes. This enables the system to send the email template at the correct time. Best practice is to avoid manual edits to the field value.</description>
        <label>Email Template Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Document Assigned - Bulk</fullName>
                </value>
                <value>
                    <fullName>Account Document Rejected</fullName>
                </value>
                <value>
                    <fullName>Borrower Added (Existing)</fullName>
                </value>
                <value>
                    <fullName>Borrower Added (New)</fullName>
                </value>
                <value>
                    <fullName>Co-Owner Added (Existing)</fullName>
                </value>
                <value>
                    <fullName>Co-Owner Added (New)</fullName>
                </value>
                <value>
                    <fullName>Deposit Documents Assigned</fullName>
                </value>
                <value>
                    <fullName>Deposit Document Rejected</fullName>
                </value>
                <value>
                    <fullName>Guarantor Added (Existing)</fullName>
                </value>
                <value>
                    <fullName>Guarantor Added (New)</fullName>
                </value>
                <value>
                    <fullName>Loan Document Assigned Email - Bulk</fullName>
                </value>
                <value>
                    <fullName>Loan Document Rejected Email</fullName>
                </value>
                <value>
                    <fullName>Save and Continue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use this lookup field to select the institution for which you are selecting email templates.</description>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Institutions</relationshipLabel>
        <relationshipName>Institutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. You can also use this field when importing data into nCino to efficiently associate related records without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Email Template Institution</label>
    <nameField>
        <displayFormat>ETI-{000000000}</displayFormat>
        <label>Email Template Institution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Template Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>